docs/v0.10.2/_sources/gallery/extras/flow_cytometer_signal.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/extras/flow_cytometer_signal.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_extras_flow_cytometer_signal.py>`
        to download the full example code.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_extras_flow_cytometer_signal.py:


Generating Signal
=================

This script simulates signals from a flow cytometer using Rayleigh scattering to model the interaction
of particles with a laser beam. It demonstrates how to generate Forward Scatter (FSC) and Side Scatter (SSC) signals
using FlowCyPy and visualize the results.

Steps:
1. Define the flow parameters and particle size distribution.
2. Set up the laser source and detectors.
3. Simulate the flow cytometer signals.
4. Visualize and analyze the signals from FSC and SSC detectors.

.. GENERATED FROM PYTHON SOURCE LINES 15-106

.. code-block:: Python


    # Step 1: Import the necessary libraries
    from FlowCyPy import FlowCytometer, ScattererCollection, Detector, GaussianBeam, FlowCell
    from FlowCyPy import distribution, Population
    from FlowCyPy.signal_digitizer import SignalDigitizer
    from FlowCyPy import units

    # Step 2: Set up the light source
    # -------------------------------
    # A laser with a wavelength of 1550 nm, optical power of 2 mW, and a numerical aperture of 0.4 is used.
    source = GaussianBeam(
        numerical_aperture=0.4 * units.AU,     # Numerical aperture: 0.4
        wavelength=1550 * units.nanometer,     # Wavelength: 1550 nm
        optical_power=200 * units.milliwatt    # Optical power: 2 mW
    )

    # Step 3: Define the flow parameters
    # ----------------------------------
    # Flow speed is set to 80 micrometers per second, with a flow area of 1 square micrometer and a total simulation time of 1 second.
    flow_cell = FlowCell(
        source=source,
        volume_flow=0.1 * units.microliter / units.second, # Flow speed: 10 microliter per second
        flow_area=(10 * units.micrometer) ** 2, # Flow area: 40 x 40 micrometers
    )

    # Step 4: Define the particle size distribution
    # ---------------------------------------------
    # We define a normal distribution for particle sizes with a mean of 200 nm, standard deviation of 10 nm,
    # and a refractive index of 1.39 with a small variation of 0.01.
    scatterer_collection = ScattererCollection(medium_refractive_index=1.33 * units.RIU)

    population_0 = Population(
        name='EV',
        particle_count=1e+9 * units.particle / units.milliliter,
        size=distribution.RosinRammler(characteristic_size=200 * units.nanometer, spread=4.5),
        refractive_index=distribution.Normal(mean=1.42 * units.RIU, std_dev=0.05 * units.RIU)
    )

    population_1 = Population(
        name='LP',
        particle_count=1e+11 * units.particle / units.milliliter,
        size=distribution.RosinRammler(characteristic_size=100 * units.nanometer, spread=4.5),
        refractive_index=distribution.Normal(mean=1.39 * units.RIU, std_dev=0.05 * units.RIU)
    )

    scatterer_collection.add_population(population_1, population_0)

    # scatterer_collection.dilute(100)

    # Step 5: Set up the detectors
    # ----------------------------
    # Two detectors are used: Forward Scatter (FSC) and Side Scatter (SSC). Each detector is configured
    # with its own numerical aperture, responsitivity, noise level, and acquisition frequency.
    signal_digitizer = SignalDigitizer(
        bit_depth=1024,
        saturation_levels='auto',
        sampling_rate=10 * units.megahertz,           # Sampling frequency: 10 MHz
    )

    detector_fsc = Detector(
        name='FSC',                         # Forward Scatter detector
        numerical_aperture=1.2 * units.AU,        # Numerical aperture: 0.2
        phi_angle=0 * units.degree,               # Angle: 180 degrees for forward scatter
    )

    detector_ssc = Detector(
        name='SSC',                         # Side Scatter detector
        numerical_aperture=1.2 * units.AU,        # Numerical aperture: 0.2
        phi_angle=90 * units.degree,              # Angle: 90 degrees for side scatter
    )

    # Step 6: Create a FlowCytometer instance
    # ---------------------------------------
    # The flow cytometer is configured with the source, scatterer distribution, and detectors.
    # The 'mie' coupling mechanism models how the particles interact with the laser beam.
    cytometer = FlowCytometer(
        signal_digitizer=signal_digitizer,
        scatterer_collection=scatterer_collection,
        flow_cell=flow_cell,  # Particle size distribution
        detectors=[detector_fsc, detector_ssc],  # Detectors: FSC and SSC
    )

    # Step 7: Simulate flow cytometer signals
    # ---------------------------------------
    # Simulate the signals for both detectors (FSC and SSC) as particles pass through the laser beam.
    # Run the flow cytometry simulation
    acquisition = cytometer.get_acquisition(run_time=0.2 * units.millisecond)

    # Visualize the scatter signals from both detectors
    acquisition.digital.plot(filter_population=['EV'])




.. image-sg:: /gallery/extras/images/sphx_glr_flow_cytometer_signal_001.png
   :alt: flow cytometer signal
   :srcset: /gallery/extras/images/sphx_glr_flow_cytometer_signal_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    PlaneWave(amplitude=<Quantity([5613041.23737425 5613041.23737425 5613041.23737425 ... 5613041.23737425
     5613041.23737425 5613041.23737425], 'volt / meter')>, wavelength=<Quantity([1550 1550 1550 ... 1550 1550 1550], 'nanometer')>, polarization=Linear(element=array([[1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           ...,
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j]]))) 



    Sphere(source=PlaneWave(amplitude=<Quantity([5613041.23737425 5613041.23737425 5613041.23737425 ... 5613041.23737425
     5613041.23737425 5613041.23737425], 'volt / meter')>, wavelength=<Quantity([1550 1550 1550 ... 1550 1550 1550], 'nanometer')>, polarization=Linear(element=array([[1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           ...,
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j]]))), diameter=<Quantity([ 90.14185216  71.06323448  80.32731237 ... 113.70319494 123.28879778
     153.53079525], 'nanometer')>, property=<Quantity([1.33388519 1.37913018 1.384242   ... 1.43432935 1.51483921 1.54096821], 'refractive_index_unit')>, medium_property=<Quantity([1.33 1.33 1.33 ... 1.33 1.33 1.33], 'refractive_index_unit')>) 



    Photodiode(NA=<Quantity([1.2 1.2 1.2 ... 1.2 1.2 1.2], 'dimensionless')>, gamma_offset=<Quantity([0 0 0 ... 0 0 0], 'degree')>, phi_offset=<Quantity([0 0 0 ... 0 0 0], 'degree')>, mean_coupling=False, coherent=False, cache_NA=<Quantity([0 0 0 ... 0 0 0], 'dimensionless')>, sampling=<Quantity([100 100 100 ... 100 100 100], 'dimensionless')>, polarization_filter=<Quantity([nan nan nan ... nan nan nan], 'degree')>, mode_number=array(['NC00', 'NC00', 'NC00', ..., 'NC00', 'NC00', 'NC00'], dtype='<U4'), rotation=<Quantity([0 0 0 ... 0 0 0], 'degree')>)
    PlaneWave(amplitude=<Quantity([5613041.23737425 5613041.23737425 5613041.23737425 ... 5613041.23737425
     5613041.23737425 5613041.23737425], 'volt / meter')>, wavelength=<Quantity([1550 1550 1550 ... 1550 1550 1550], 'nanometer')>, polarization=Linear(element=array([[1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           ...,
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j]]))) 



    Sphere(source=PlaneWave(amplitude=<Quantity([5613041.23737425 5613041.23737425 5613041.23737425 ... 5613041.23737425
     5613041.23737425 5613041.23737425], 'volt / meter')>, wavelength=<Quantity([1550 1550 1550 ... 1550 1550 1550], 'nanometer')>, polarization=Linear(element=array([[1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           ...,
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j],
           [1.+0.j, 0.+0.j]]))), diameter=<Quantity([ 90.14185216  71.06323448  80.32731237 ... 113.70319494 123.28879778
     153.53079525], 'nanometer')>, property=<Quantity([1.33388519 1.37913018 1.384242   ... 1.43432935 1.51483921 1.54096821], 'refractive_index_unit')>, medium_property=<Quantity([1.33 1.33 1.33 ... 1.33 1.33 1.33], 'refractive_index_unit')>) 



    Photodiode(NA=<Quantity([1.2 1.2 1.2 ... 1.2 1.2 1.2], 'dimensionless')>, gamma_offset=<Quantity([0 0 0 ... 0 0 0], 'degree')>, phi_offset=<Quantity([90 90 90 ... 90 90 90], 'degree')>, mean_coupling=False, coherent=False, cache_NA=<Quantity([0 0 0 ... 0 0 0], 'dimensionless')>, sampling=<Quantity([100 100 100 ... 100 100 100], 'dimensionless')>, polarization_filter=<Quantity([nan nan nan ... nan nan nan], 'degree')>, mode_number=array(['NC00', 'NC00', 'NC00', ..., 'NC00', 'NC00', 'NC00'], dtype='<U4'), rotation=<Quantity([0 0 0 ... 0 0 0], 'degree')>)




.. GENERATED FROM PYTHON SOURCE LINES 107-110

The above plot shows the raw simulated signals for Forward Scatter (FSC) and
Side Scatter (SSC) channels. These signals provide insights into particle size
and complexity and can be further analyzed for feature extraction, such as peak height and width.


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 1.467 seconds)


.. _sphx_glr_download_gallery_extras_flow_cytometer_signal.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: flow_cytometer_signal.ipynb <flow_cytometer_signal.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: flow_cytometer_signal.py <flow_cytometer_signal.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: flow_cytometer_signal.zip <flow_cytometer_signal.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
